Fix naviation section overlapping

--- a/assets/src/scss/links.scss
+++ b/assets/src/scss/links.scss
@@ -13,6 +13,7 @@
   cursor: pointer;
   overflow: visible;
 
+
   .links-subs {
     width: 17%;
     text-align: center;
@@ -28,7 +29,7 @@
       height: 55px;
       font-size: 24px;
       line-height: 55px;
-      font-weight: 700;
+      font-weight: 300;
       color: darken(#ccc, 50%);
       border-bottom: 4px solid gray;
       display: flex;
